# finance-cli

./: Cargo.toml  README.ms  finance.db
data/: sample.csv
src/: cli.rs  db.rs  import.rs  main.rs  models.rs  report.rs
